# parallel_resize

./: CMakeLists.txt  main.cpp
